<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TipJar</string>

    <string name="history">History</string>
    <string name="change_currency">Change Currency</string>

    <string name="enter_amount">Enter amount</string>
    <string name="how_many_people">How many people?</string>
    <string name="tip">% TIP</string>
    <string name="total_tip">Total Tip</string>
    <string name="per_person">Per Person</string>
    <string name="take_photo_of_receipt">Take photo of receipt</string>
    <string name="save_payment">Save payment</string>

    <string name="saved_payments">Saved payments</string>

    <string name="can_not_take_photo_of_receipt_toast">Can\'t open camera to take a photo of the receipt</string>

    <string name="one_item_deleted">1 deleted</string>
    <string name="snack_bar_undo">Undo</string>
    <string name="tip_amount_placeholder">Tip: %s</string>

    <string name="percent_sign" translatable="false">%</string>
    <string name="plus_sign" translatable="false">+</string>
    <string name="minus_sign" translatable="false">-</string>

</resources>